# nutritionist_tg_bot

./: .env-example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yaml  alembic.ini  pyproject.toml  redis.conf
ci-cd-files/: Dockerfile  docker-compose-test.yml  docker-compose.yml  nginx.conf  nginx.conf.template
migrations/: env.py
migrations/versions/: initial_migration.py
src/app/: main.py
src/app/bot/: main.py
src/app/bot/handlers/: command_handler.py  messages_handler.py
src/app/bot/keyboards/: main_keyboards.py
src/app/core/: config.py  containers.py  prompts.py
src/app/db/: __init__.py  crud.py  models.py  session.py  utils.py
src/app/integrations/: redis.py
src/app/integrations/llm/: base.py  openai.py  yandexgpt.py
src/app/integrations/rmq/: consumer.py  publisher.py
src/app/services/: bot_functions.py
src/app/utils/: general.py  log_config.py
src/tests/fixtures/: conftest.py
